SUBDIRS = icare delaminated_crack bimat_contact_crack_test static_friction \
	 bimaterial_crack_test mixed_elastostatic xfem_contact crack_plate \
	 aposteriori inter_element_test contact_grd_trans                  \
         mixed_dynamic_friction xfem_large_strain signorini_schwarz        \
         static_contact_gears xfem_stab_unilat_contact
