#http://sources.redhat.com/automake/automake.html#Local-Macros
#ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src tests 

install-toolbox: all
	cd src && $(MAKE) install-toolbox 

#EXTRA_DIST=BUGS README.alpha_cxx README.sgiCC README.darwin gnumex autogen.sh

#DISTCHECK_CONFIGURE_FLAGS = ...PLOPLOPLOPAREMPLIR
host_canonical=@host_cpu@-@host_vendor@-@host_os@

bindist: all	
	mkdir bdist
	cp @srcdir@/src/*.m bdist
	cp -a @srcdir@/src/private bdist
	cp -a @srcdir@/src/@gf* bdist
	cp src/*.m bdist
	cp src/gf_matlab@MATLAB_COM_EXT@ bdist
	mv bdist getfem-matlab-$(host_canonical) && tar czvf getfem-matlab-$(host_canonical).tar.gz getfem-matlab-$(host_canonical)






















































































































































































































































































































































































































































































