include_HEADERS =                        \
	getfem_boost/workaround.hpp      \
	getfem_boost/intrusive_ptr.hpp   \
	dal_algobase.h                   \
	dal_singleton.h		         \
	dal_alloc.h                      \
	dal_shared_ptr.h                 \
	dal_basic.h                      \
	dal_bit_vector.h                 \
	dal_static_stored_objects.h      \
	dal_naming_system.h              \
	dal_ref.h                        \
	dal_std.h                        \
	dal_except.h                     \
	dal_backtrace.h		         \
	dal_tas.h                        \
	dal_tree_sorted.h                \
	bgeot_config.h                   \
	bgeot_imbricated_box.h	         \
	bgeot_permutations.h             \
	bgeot_convex_structure.h         \
	bgeot_convex.h                   \
	bgeot_convex_hull.h              \
	bgeot_convex_intersect.h         \
	bgeot_convex_ref.h               \
	bgeot_geometric_trans.h          \
	bgeot_geotrans_inv.h             \
	bgeot_kdtree.h		         \
	bgeot_mesh.h                     \
	bgeot_mesh_structure.h           \
	bgeot_poly.h                     \
	bgeot_rtree.h		         \
	bgeot_simplexify.h               \
	bgeot_small_vector.h             \
	bgeot_sparse_tensors.h           \
	bgeot_tensor.h                   \
	bgeot_vector.h                   \
	bgeot_comma_init.h	         \
	ftool.h                          \
	getfem_arch_config.h             \
	getfem_integration.h             \
	getfem_context.h                 \
	getfem_poly_composite.h          \
	getfem_assembling.h              \
	getfem_assembling_tensors.h      \
	getfem_external_data_fem.h       \
	getfem_config.h                  \
	getfem_interpolation.h           \
	getfem_export.h                  \
	getfem_import.h	                 \
	getfem_derivatives.h             \
	getfem_fem.h                     \
	getfem_interpolated_fem.h        \
	getfem_fem_sum.h                 \
	getfem_mesh_fem_sum.h            \
	getfem_gauss_lobatto_fem_coef.h  \
	getfem_Xfem.h                    \
	getfem_spider_fem.h              \
	getfem_im_list.h                 \
	getfem_mat_elem.h                \
	getfem_mat_elem_type.h           \
	getfem_mesh.h                    \
	getfem_mesh_fem.h                \
	getfem_mesh_im.h                 \
	getfem_level_set.h	         \
	getfem_mesh_level_set.h          \
	getfem_mesh_im_level_set.h       \
	getfem_mesh_fem_level_set.h	 \
	getfem_fem_level_set.h           \
	getfem_mesh_slicers.h	         \
	getfem_mesh_slice.h	         \
	getfem_norm.h         	         \
	getfem_regular_meshes.h          \
	getfem_modeling.h                \
	getfem_linearized_plates.h       \
	getfem_Coulomb_friction.h        \
	getfem_nonlinear_elasticity.h    \
	getfem_superlu.h		 \
	getfem_plasticity.h              \
	getfem_mesher.h                  \
	gmm.h                            \
	gmm_matrix.h                     \
	gmm_iter_solvers.h               \
	gmm_iter.h                       \
	gmm_inoutput.h                   \
	gmm_vector.h                     \
	gmm_transposed.h                 \
	gmm_scaled.h                     \
	gmm_conjugated.h                 \
	gmm_real_part.h                  \
	gmm_def.h                        \
	gmm_sub_index.h                  \
	gmm_vector_to_matrix.h           \
	gmm_sub_vector.h                 \
	gmm_sub_matrix.h                 \
	gmm_interface.h                  \
	gmm_kernel.h                     \
	gmm_interface_bgeot.h            \
	gmm_solver_cg.h                  \
	gmm_solver_constrained_cg.h      \
	gmm_modified_gram_schmidt.h      \
	gmm_dense_Householder.h          \
	gmm_dense_lu.h                   \
	gmm_dense_qr.h                   \
	gmm_dense_sylvester.h            \
	gmm_tri_solve.h                  \
	gmm_solver_gmres.h               \
	gmm_solver_idgmres.h             \
	gmm_solver_qmr.h                 \
	gmm_solver_bicgstab.h            \
	gmm_solver_Schwarz_additive.h    \
	gmm_solver_bfgs.h                \
	gmm_domain_decomp.h              \
	gmm_superlu_interface.h          \
	gmm_precond.h                    \
	gmm_precond_ildlt.h              \
	gmm_precond_ildltt.h             \
	gmm_precond_mr_approx_inverse.h  \
	gmm_precond_diagonal.h           \
	gmm_precond_ilu.h                \
	gmm_precond_ilut.h               \
	gmm_precond_ilutp.h              \
	gmm_blas.h                       \
	gmm_blas_interface.h             \
	gmm_lapack_interface.h           \
	gmm_condition_number.h           \
	gmm_opt.h                        \
	linkmsg.h

SRC =                                    \
	dal_backtrace.cc                 \
	dal_bit_vector.cc                \
	dal_singleton.cc		 \
	dal_static_stored_objects.cc     \
	bgeot_convex_structure.cc        \
	bgeot_convex_ref.cc              \
	bgeot_geometric_trans.cc         \
	bgeot_geotrans_inv.cc            \
	bgeot_imbricated_box.cc          \
	bgeot_kdtree.cc		         \
	bgeot_mesh_structure.cc          \
	bgeot_rtree.cc		         \
	bgeot_small_vector.cc            \
	bgeot_sparse_tensors.cc          \
	bgeot_poly.cc                    \
	ftool.cc                         \
	getfem_superlu.cc		 \
	getfem_context.cc                \
	getfem_mesh_fem.cc               \
	getfem_mesh_im.cc                \
	getfem_integration.cc            \
	getfem_poly_composite.cc         \
	getfem_integration_composite.cc  \
	getfem_fem.cc                    \
	getfem_interpolated_fem.cc       \
	getfem_fem_sum.cc                \
	getfem_Xfem.cc                   \
	getfem_fem_composite.cc          \
	getfem_mat_elem.cc               \
	getfem_mat_elem_type.cc          \
	getfem_mesh.cc                   \
	getfem_level_set.cc	         \
	getfem_mesh_level_set.cc         \
	getfem_mesh_im_level_set.cc      \
	getfem_mesh_fem_level_set.cc     \
	getfem_mesh_fem_sum.cc           \
	getfem_fem_level_set.cc          \
	getfem_mesh_slicers.cc	         \
	getfem_mesh_slice.cc	         \
	getfem_regular_meshes.cc         \
	getfem_import.cc	         \
	getfem_interpolation.cc          \
	getfem_export.cc                 \
	getfem_assembling_tensors.cc     \
	getfem_mesher.cc

lib_LTLIBRARIES = libgetfem.la
libgetfem_la_SOURCES = $(SRC)
libgetfem_la_LDFLAGS = ${LIBTOOL_VERSION_INFO}
libgetfem_la_LIBADD = ../superlu/libsuperlu.la

CLEANFILES = ii_files/* *.o.d
DISTCLEANFILES = getfem_im_list.h getfem_arch_config.h
